<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Here you put the rest of your current view-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".update">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minHeight="50dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp"></TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:text="@string/BookID"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewBookID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BookID" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CategoryID"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewCatID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CategoryID" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ISBN"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewISBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ISBN" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SWDiscount"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SWDiscount" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FinalPrice"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewFinalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FinalPrice" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:singleLine="false" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Author"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stock"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="136dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Synopsis"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Price"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="74dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:gravity="center_vertical|center_horizontal|fill_horizontal|end"
            android:paddingLeft="50dp"
            android:text="Update" />
    </LinearLayout>

</LinearLayout>

</ScrollView>